public/style.css
header {
    padding-top: 1em;
}
header h1 {
    text-align: center;
}
#today {
    text-align: center;
    margin: 1rem auto;
}
main {
    margin: 0 3rem;
}
.Box {
    margin: 1rem;
}
ul {
    margin: 0 2rem;
}
@media screen and (max-width = 600px) {
    main {
        margin: 0 1rem;
    }
}
#back {
    position: fixed;
    top: .5rem;
    left: .5rem;
    padding: .5rem;
    border-radius: 100vmax;
    background-color: var(--color-canvas-default);
    border: 1px solid var(--color-border-default);
}
#back svg path {
    fill: var(--color-fg-default);
}

